Sun Dec 13 23:06:35 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc: Fix potential coredump when calculating
	date_factor and backlink_factor on docs that aren't in the
	database.

Sat Dec 12 23:17:56 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/cf_byname.html, htdoc/cf_byprog.html, htdoc/attrs.html:
	Added docs for new options since version 3.1.0b2.

	* htdoc/RELEASE.html: Added notes on changes since 3.1.0b2 (we
	should keep this up rather than all-at-once).

	* htdoc/hts_templates: Include documentation on using CGI
	environment variables in templates with this version.

	* htdig/Retriever.cc(got_href): Added check to prevent
	currenthopcount from becoming -1.

	* htcommon/WordList.cc: Change undefined minimumWordLength to
	config("minimum_word_length").
	
Sat Dec 12 12:01:55 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* Makefile.in, Makefile.config.in, */Makefile.in: Added target
	mostlyclean to clean up, but leave compile-intensive targets
	(e.g. db, rx code). General cleanup too.

	* htdoc/where.html: Updated for eventual 3.1.0b3 release.

	* htcommon/WordList.cc: Added additional cleanups for the words in
	the bad word file, in case they have invalid punctuation, etc.

Sat Dec 12 18:41:29 1998  Alexander Bergolth  <leo@strike.wu-wien.ac.at>

	* htmerge/words.cc: Fix last update so that it compiles on AIX.

Fri Dec 11 10:40:48 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc: Added additional debugging info on the
	reason for excluding a URL, based on a patch by Benoit Majeau
	<Benoit.Majeau@nrc.ca>.

	* htmerge/words.cc: Fixed a bug where pointer, rather than strings
	were assigned. Silly references...

	* htsearch/Display.cc, htsearch/Display.h: Added patch from Gilles
	to allow CGI environment variables in templates.

	* htdig/HTML.cc: Fix core dump when META refresh tags don't have
	content portions.
	
Thu Dec 10 22:28:44 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>
